--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,7 +53,6 @@ height: 1319px;
     font-size: 14px;
     line-height: 24px;
     color: #595959;
-    /* margin-bottom: 40px; */
     width: 400px;
 }
 
@@ -61,11 +60,7 @@ height: 1319px;
 /* project styles */
 .projects {
 margin-bottom: 50px;
-/*   
-    margin-top: 100px;
-margin-bottom:300px ;
-margin-left: 60px;
-margin-right: 90px; */
+
 }
 .title {
     font-style: normal;
@@ -135,7 +130,7 @@ margin-bottom: 10px;
 font-weight: 700;
 font-size: 16px;
 line-height: 20px;
-  color: #a69052 ; 
+  color: #a96da0 ; 
   margin-bottom: 10px;
 }
 .period {
@@ -180,7 +175,7 @@ color: #595959;
 /* #8c8935 */
 /* sidebar styles*/
 .sidebar {
-background-color: #a69052;
+background-color: #a96da0;
 padding-top: 40px;
 width: 370px;
 height: 1279px;
